--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -513,14 +513,33 @@ Thus the set of vectors is linearly dependent.
 \end{solution}
 
 \begin{problem}{V6}
-Explain why the set of vectors \[ \left\{
+Consider the statement
+
+\begin{center}\begin{minipage}{0.8\textwidth}
+The set of vectors \( \left\{
  \begin{bmatrix} 3 \\ 2 \\ 1 \\ 0 \end{bmatrix} ,
  \begin{bmatrix} -1 \\ 1 \\ 2 \\ 3 \end{bmatrix} ,
  \begin{bmatrix} 0 \\ 1 \\ -1 \\ 1 \end{bmatrix} ,
- \begin{bmatrix} 2 \\ 5 \\ 1 \\ 5 \end{bmatrix} \right\} \]
-is or is not a basis of \(\IR^4\).
+ \begin{bmatrix} 2 \\ 5 \\ 1 \\ 5 \end{bmatrix} \right\} \)
+is a basis of \(\IR^4\).
+\end{minipage}\end{center}
+\begin{enumerate}[(a)]
+\item Write an equivalent statement in terms of other vector properties.
+\item Explain why your statement is true or false.
+\end{enumerate}
 \end{problem}
 \begin{solution}
+\begin{enumerate}[(a)]
+\item This statement is equivalent to the statement
+\begin{center}\begin{minipage}{0.8\textwidth}
+The set of vectors \( \left\{
+ \begin{bmatrix} 3 \\ 2 \\ 1 \\ 0 \end{bmatrix} ,
+ \begin{bmatrix} -1 \\ 1 \\ 2 \\ 3 \end{bmatrix} ,
+ \begin{bmatrix} 0 \\ 1 \\ -1 \\ 1 \end{bmatrix} ,
+ \begin{bmatrix} 2 \\ 5 \\ 1 \\ 5 \end{bmatrix} \right\} \)
+is both linearly independent and spans \(\IR^4\).
+\end{minipage}\end{center}
+\item
 Compute
 \[\RREF \begin{bmatrix} 3 & -1 & 0 & 2 \\ 2 & 1 & 1 & 5 \\ 1 & 2 & -1 & 1 \\ 0 & 3 & 1 & 5 \end{bmatrix} =
 \begin{bmatrix} 1 & 0 & 0 & 1 \\ 0 & 1 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \end{bmatrix}.\]
@@ -530,11 +549,12 @@ dependent and thus not a basis of \(\IR^4\).
 (Alternate solution:)
 Since the fourth row is not a pivot row, the vectors do not span
 \(\IR^4\) and thus are not a basis of \(\IR^4\).
+\end{enumerate}
 \end{solution}
 
 
 \begin{problem}{V7}
-Find a basis for the subspace 
+Consider the subspace 
 \[
   W = \vspan \left\{
   \begin{bmatrix} 1 \\ -3 \\ -1 \\ 2 \end{bmatrix} ,
@@ -544,10 +564,14 @@ Find a basis for the subspace
   \begin{bmatrix} 2 \\ 3 \\ 0 \\ 1 \end{bmatrix}
   \right\} .
 \]
-Be sure to explain why your subspace is a basis.
+\begin{enumerate}[(a)]
+\item Explain how to find a basis of \(W\).
+\item Explain how to find the dimension of \(W\).
+\end{enumerate}
 \end{problem}
 \begin{solution}
-Observe that
+\begin{enumerate}[(a)]
+\item Observe that
 \[ \RREF
     \begin{bmatrix}
     1 & 1 & 3 & 1 & 2 \\
@@ -571,88 +595,58 @@ Therefore
   \begin{bmatrix} 1 \\ 6 \\ 1 \\ -1 \end{bmatrix}
   \right\}
 \]
-is a basis of \(W\).
+is a basis of \(W\). 
+\item Since this (and thus every other) basis has three vectors in it, the dimension of \(W\) is \(3\).
+\end{enumerate}
 \end{solution}
 
 \begin{problem}{V8}
-Explain how to find the dimension of 
-\[
-  W = \vspan \left\{
-  \begin{bmatrix} 1 \\ -3 \\ -1 \\ 2 \end{bmatrix} ,
-  \begin{bmatrix} 1 \\ 0 \\ 1 \\ -2 \end{bmatrix} ,
-  \begin{bmatrix} 3 \\ -6 \\ -1 \\ 2 \end{bmatrix} ,
-  \begin{bmatrix} 1 \\ 6 \\ 1 \\ -1 \end{bmatrix} ,
-  \begin{bmatrix} 2 \\ 3 \\ 0 \\ 1 \end{bmatrix}
-  \right\} .
-\]
+Consider the statment
+\begin{center}\begin{minipage}{0.8\textwidth}
+The set of polynomials \(\setList{3x^3+2x^2+x,-x^3+x^2+2x+3,x^2-x+1,2x^3+5x^2+x+5}\) is linearly independent.
+\end{minipage}\end{center}
+\begin{enumerate}[(a)]
+\item Write an equivalent statement using a polynomial equation.
+\item Explain why your statement is true or false.
+\end{enumerate}
 \end{problem}
 \begin{solution}
-The dimension of a space is equal to how many vectors belong
-to any basis for the space.
-So since
-\[ \RREF
-    \begin{bmatrix}
-    1 & 1 & 3 & 1 & 2 \\
-    -3 & 0 & -6 & 6 & 3 \\
-    -1 & 1 & -1 & 1 & 0 \\
-    2 & -2 & 2 & -1 & 1
-    \end{bmatrix} =
-    \begin{bmatrix}
-    1 & 0 & 2 & 0 & 1 \\
-    0 & 1 & 1 & 0 & 0 \\
-    0 & 0 & 0 & 1 & 1 \\
-    0 & 0 & 0 & 0 & 0
-    \end{bmatrix}
-\]
-has three pivot columns, any basis of \(W\) has three elements, and therefore \(\dim W = 3\).
+\begin{enumerate}[(a)]
+\item This statement is equivalent to the statement
+\begin{center}\begin{minipage}{0.8\textwidth}
+The polynomial equation \( y_1(3x^3+2x^2+x) + y_2(-x^3+x^2+2x+3)+y_3(x^2-x+1)+y_4(2x^3+5x^2+x+5)=0\) has no nontrivial solutions.
+\end{minipage}\end{center}
+\item
+This polynomial equation corresponds to the system of equations
+\begin{alignat*}{5}
+3y_1 &-& y_2 & & &+& 2y_4 &=& 0 \\
+2y_1 &+& y_2 &+& y_3 &+& 5y_4 &=& 0 \\
+ y_1 &+& 2y_2 &-& y_3 &+& y_4 &=& 0 \\
+& & 3y_2 &+& y_3 &+& 5y_4 &=& 0 
+\end{alignat*}
+which corresponds to the augmented matrix \(\begin{bmatrix} 3 & -1 & 0 & 2 \\ 2 & 1 & 1 & 5 \\ 1 & 2 & -1 & 1 \\ 0 & 3 & 1 & 5 \end{bmatrix}\). So we compute
+\[\RREF \begin{bmatrix} 3 & -1 & 0 & 2 \\ 2 & 1 & 1 & 5 \\ 1 & 2 & -1 & 1 \\ 0 & 3 & 1 & 5 \end{bmatrix} =
+\begin{bmatrix} 1 & 0 & 0 & 1 \\ 0 & 1 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \end{bmatrix}.\]
+Since the fourth column is not a pivot column, there are (infinitely many) nontrivial solutions. Thus, the set \( \setList{3x^3+2x^2+x,-x^3+x^2+2x+3,x^2-x+1}\) is linearly dependent.
+\end{enumerate}
 \end{solution}
 
 \begin{problem}{V9}
-Find a basis for the subspace of \(\P^3\)
-\[W=\vspan\setList{3x^3+2x^2+x,-x^3+x^2+2x+3,x^2-x+1,2x^3+5x^2+x+5}.\]
-Be sure to explain why your result is a basis.
-\end{problem}
-\begin{solution}
-This question is equivalent to finding a basis for the subspace
-\[
-  W' = \vspan \setList{
-  \begin{bmatrix} 3\\2\\1\\0\end{bmatrix},
-  \begin{bmatrix} -1\\1\\2\\3\end{bmatrix},
-  \begin{bmatrix} 0\\1\\-1\\1\end{bmatrix},
-  \begin{bmatrix} 2\\5\\1\\5\end{bmatrix}
-  }
-\]
-of Euclidean vectors.
-
-Compute
-\[\RREF \begin{bmatrix} 3 & -1 & 0 & 2 \\ 2 & 1 & 1 & 5 \\ 1 & 2 & -1 & 1 \\ 0 & 3 & 1 & 5 \end{bmatrix} =
-\begin{bmatrix} 1 & 0 & 0 & 1 \\ 0 & 1 & 0 & 1 \\ 0 & 0 & 1 & 2 \\ 0 & 0 & 0 & 0 \end{bmatrix}.\]
-Since the fourth column is not a pivot column, a basis for \(W'\) is given by
-\[
-  \setList{
-  \begin{bmatrix} 3\\2\\1\\0\end{bmatrix},
-  \begin{bmatrix} -1\\1\\2\\3\end{bmatrix},
-  \begin{bmatrix} 0\\1\\-1\\1\end{bmatrix}
-  }
-\]
-
-Thus a basis for \(W\) is given by
-\[
-  \setList{3x^3+2x^2+x,-x^3+x^2+2x+3,x^2-x+1}
-\]
-\end{solution}
-
-\begin{problem}{V10}
-Explain how to find a basis for the solution set of the homogeneous system of equations
+Consider the homogeneous system of equations
 \begin{alignat*}{6}
 x_1 &\,+\,& x_2 &\,+\,& 3x_3 &\,+\,& x_4 &\,+\,& 2x_5 &=& 0 \\
 -3x_1 &\,\,&  &\,-\,& 6x_3 &\,+\,&6 x_4 &\,+\,& 3x_5 &=& 0 \\
 -x_1 &\,+\,& x_2 &\,-\,& x_3 &\,+\,& x_4 &\,\,&  &=& 0 \\
 2x_1 &\,-\,& 2x_2 &\,+\,& 2x_3 &\,-\,& x_4 &\,+\,& x_5 &=& 0 .
 \end{alignat*}
+\begin{enumerate}[(a)]
+\item Find the solution space of the system.
+\item Find a basis of the solution space.
+\end{enumerate}
 \end{problem}
 \begin{solution}
-Observe that
+\begin{enumerate}[(a)]
+\item Observe that
 \[ \RREF
     \begin{bmatrix}[ccccc|c]
     1 & 1 & 3 & 1 & 2 & 0\\
@@ -683,9 +677,10 @@ x_1 &\,\,&  &\,+\,& 2x_3 &\,\,&  &\,+\,& x_5 &=& 0 \\
 Thus, the solution set is
 \[ \setBuilder{\begin{bmatrix} -2a-b \\ -a \\ a \\ -b \\ b \end{bmatrix}}{a,b \in \IR} .\]
 
-Since we can write \[\begin{bmatrix} -2a-b \\ -a \\ a \\ -b \\ b \end{bmatrix} = a \begin{bmatrix} -2 \\ -1 \\ 1 \\ 0 \\ 0 \end{bmatrix} + b \begin{bmatrix} -1 \\ 0 \\ 0 \\ -1 \\ 1 \end{bmatrix}, \]
+\item Since we can write \[\begin{bmatrix} -2a-b \\ -a \\ a \\ -b \\ b \end{bmatrix} = a \begin{bmatrix} -2 \\ -1 \\ 1 \\ 0 \\ 0 \end{bmatrix} + b \begin{bmatrix} -1 \\ 0 \\ 0 \\ -1 \\ 1 \end{bmatrix}, \]
 a basis for the solution space is
 \[ \left \{ \begin{bmatrix} -2 \\ -1 \\ 1 \\ 0 \\ 0 \end{bmatrix} , \begin{bmatrix} -1 \\ 0 \\ 0 \\ -1 \\ 1 \end{bmatrix} \right\}.\]
+\end{enumerate}
 \end{solution}
 
 \begin{problem}{A1}
@@ -738,10 +733,10 @@ and is therefore not a linear transformation.
 \end{solution}
 
 \begin{problem}{A2}
-Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -x+y \\ -x+3y-z \\ 7x+y+3z \\ 0 \end{bmatrix}.$$
 \begin{enumerate}[(a)]
-\item Explain how to find the standard matrix for \(T\).
-\item Explain how to find \( T\left( \begin{bmatrix} -2 \\ 0 \\ 3 \end{bmatrix} \right) \)
+\item Find the standard matrix for the linear transformation \(T: \IR^3\rightarrow \IR^4\) given by \[T\left(\begin{bmatrix} x \\ y \\ z \\  \end{bmatrix} \right) = \begin{bmatrix} -x+y \\ -x+3y-z \\ 7x+y+3z \\ 0 \end{bmatrix}.\]
+\item Let \(S: \IR^4 \rightarrow \IR^3\) be the linear transformation given by the standard matrix \[\begin{bmatrix} 2 & 3 & 4 & 1 \\ 0 & 1 & -1 & -1 \\ 3 & -2 & -2 & 4 \end{bmatrix}.\]
+Compute  \( S\left( \begin{bmatrix} -2 \\ 1 \\ 3 \\ 2\end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
 
@@ -749,26 +744,15 @@ Let $T: \IR^3\rightarrow \IR^4$ be the linear transformation given by $$T\left(\
 \begin{enumerate}[(a)]
 \item Since
 \begin{align*}
-T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix}\right) &= \begin{bmatrix} -1 \\ -1 \\ 7 \\0\end{bmatrix} &
+T\left(\begin{bmatrix} 1 \\ 0 \\ 0  \end{bmatrix}\right) &= \begin{bmatrix} -1 \\ -1 \\ 7 \\0\end{bmatrix} &
 T\left(\begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix}\right) &= \begin{bmatrix} 1 \\ 3 \\ 1 \\0 \end{bmatrix}  &
-T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix}\right) &= \begin{bmatrix} 0 \\ -1 \\ 3 \\ 0  \end{bmatrix}
+T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix}\right) &= \begin{bmatrix} 0 \\ -1 \\ 3 \\ 0  \end{bmatrix}, 
 \end{align*}
-The standard matrix is \( \begin{bmatrix} -1 & 1 & 0 \\ -1 & 3 & -1 \\ 7 & 1 & 3  \\ 0 & 0 & 0 \end{bmatrix} \).
-\item \(
-T\left(\begin{bmatrix} -2 \\ 0 \\ 3 \\  \end{bmatrix} \right) =
-\begin{bmatrix} -(-2)+(0) \\ -(-2)+3(0)-(3) \\ 7(-2)+(0)+3(3) \\ 0\end{bmatrix}
-  =
-\begin{bmatrix} 2 \\ -1 \\ -5 \\ 0 \end{bmatrix}
-\)
-
-Alternatively,
-\(
-\begin{bmatrix} -1 & 1 & 0 \\ -1 & 3 & -1 \\ 7 & 1 & 3  \\ 0 & 0 & 0 \end{bmatrix}
-\begin{bmatrix} -2 \\ 0 \\ 3 \end{bmatrix} =
-\begin{bmatrix} -1(-2)+1(0)+0(3) \\ -1(-2)+3(0)-1(3) \\ 7(-2)+1(0)+3(3) \\ 0(-2)+0(0)+0(3)\end{bmatrix}
-  =
-\begin{bmatrix} 2 \\ -1 \\ -5 \\ 0 \end{bmatrix}
-\).
+the standard matrix for \(T\) is \( \begin{bmatrix} -1 & 1 & 0 \\ -1 & 3 & -1 \\ 7 & 1 & 3  \\ 0 & 0 & 0 \end{bmatrix} \).
+\item \[
+S\left(\begin{bmatrix} -2 \\ 1 \\ 3 \\ 2 \end{bmatrix} \right) = -2S(\vec{e}_1)+S(\vec{e}_2)+3S(\vec{e_3})+2S(\vec{e_4})
+= -2 \begin{bmatrix} 2 \\ 0 \\ 3 \end{bmatrix} + \begin{bmatrix} 3 \\ 1 \\ -2 \end{bmatrix} + 3 \begin{bmatrix} 4 \\ -1 \\ -2 \end{bmatrix}+2\begin{bmatrix} 1 \\ -1 \\ 4 \end{bmatrix} 
+= \begin{bmatrix} 13 \\ -4 \\ -6\end{bmatrix} \]
 \end{enumerate}
 \end{solution}
 
@@ -782,23 +766,46 @@ Let \(T: \IR^4 \rightarrow \IR^3\) be the linear transformation given by
     x+6y-z+3w
   \end{bmatrix}
 \]
-Show how to compute a basis for the image and a basis for the kernel of \(T\).
+\begin{enumerate}[(a)]
+\item Explain how to find the image of \(T\) and the kernel of \(T\). 
+\item Explain how to find a basis of the image of \(T\) and a basis of the kernel of \(T\). 
+\item Verify that the rank-nullity theorem holds for \(T\).
+\end{enumerate}
 \end{problem}
 \begin{solution}
-First, we note the standard matrix
-\[A=\begin{bmatrix}1 & 3 & 2 & -3 \\ 2 & 4 & 6 & -10 \\ 1 & 6 & -1 & 3 \end{bmatrix}\]
-and compute
-\[\RREF\left(A\right) = \begin{bmatrix} 1 & 0 & 5 & -9 \\ 0 & 1 & -1 & 2 \\ 0 & 0 & 0 & 0\end{bmatrix}.\]
+\begin{enumerate}[(a)]
+\item 
+\[ \Im(T) = T\left(\vspan\left\{\vec{e}_1,\vec{e}_2,\vec{e}_3,\vec{e_4}\right\}\right)
+= \vspan\left\{T(\vec{e}_1),T(\vec{e}_2),T(\vec{e}_3),T(\vec{e_4})\right\}
+= \vspan\left\{\begin{bmatrix}1 \\ 2 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ 4 \\ 6  \end{bmatrix}, \begin{bmatrix} 2 \\ 6 \\ -1 \end{bmatrix}, \begin{bmatrix} -3 \\ -10 \\ 3 \end{bmatrix}\right\}.\]
 
-A basis for the image is given by the pivot columns, namely
-\[\setList{\begin{bmatrix}1\\2\\1 \end{bmatrix},
-\begin{bmatrix}3\\4\\6 \end{bmatrix}}.\]
+The kernel is the solution set of the corresponding homogeneous system of equations, i.e.  
+\begin{alignat*}{5}
+x &+& 3y &+& 2z &-& 3w &=& 0 \\
+2x &+& 4y &+& 6z &-& 10w &=& 0 \\
+x &+& 6y &-& z &+& 3w &=& 0 .
+\end{alignat*}
+So we compute 
+\[\RREF\begin{bmatrix}[cccc|c] 1 & 3 & 2 & -3 & 0 \\ 2 & 4 & 6 & -10 &0 \\ 1 & 6 & -1 & 3 & 0 \end{bmatrix}
+= \begin{bmatrix}[cccc|c] 1 & 0 & 5 & -9 & 0 \\ 0 & 1 & -1 & 2 & 0  \\ 0 & 0 & 0 & 0 & 0 \end{bmatrix}.\]
+Then, letting \(z=a\) and \(w=b\) we have
+\[ \ker T = \setBuilder{\begin{bmatrix}-5a+9b \\ a-2b \\ a \\ b \end{bmatrix}}{a,b \in \IR}. \]
 
-The kernel is the solution set of the corresponding homogeneous system of equations
-\[ \ker T = \setBuilder{\begin{bmatrix}-5a+9b \\ a-2b \\ a \\ b \end{bmatrix}}{a,b \in \IR} \]
+\item Since 
+\(\Im(T) = \vspan\left\{\begin{bmatrix}1 \\ 2 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ 4 \\ 6  \end{bmatrix}, \begin{bmatrix} 2 \\ 6 \\ -1 \end{bmatrix}, \begin{bmatrix} -3 \\ -10 \\ 3 \end{bmatrix}\right\}\), we simply need to find a linearly independent subset of these four spanning vectors. So we compute 
+\[\RREF \begin{bmatrix}1 & 3 & 2 & -3 \\ 2 & 4 & 6 & -10 \\ 1 & 6 & -1 & 3 \end{bmatrix}
+= \begin{bmatrix} 1 & 0 & 5 & -9 \\ 0 & 1 & -1 & 2 \\ 0 & 0 & 0 & 0\end{bmatrix}.\]
+Since the first two columns are pivot columns, they form a linearly independent spanning set, so a basis for \(\Im T\) is \(\setList{\begin{bmatrix}1\\2\\1 \end{bmatrix}, \begin{bmatrix}3\\4\\6 \end{bmatrix}}.\)
+
+To find a basis for the kernel, note that 
+\[ \ker T = \setBuilder{\begin{bmatrix}-5a+9b \\ a-2b \\ a \\ b \end{bmatrix}}{a,b \in \IR} 
+= \setBuilder{a \begin{bmatrix}-5 \\ 1 \\ 1  \\ 0 \end{bmatrix}+b \begin{bmatrix} 9 \\ -2 \\ 0 \\ 1 \end{bmatrix}}{a,b \in \IR}
+= \vspan\left\{ \begin{bmatrix} -5 \\ 1 \\ 1 \\ 0 \end{bmatrix}, \begin{bmatrix} 9 \\ -2 \\ 0 \\ 1 \end{bmatrix}\right\}.\]
 so a basis for the kernel is
 \[\setList{\begin{bmatrix}-5 \\ 1 \\ 1 \\ 0 \end{bmatrix},
 \begin{bmatrix}9 \\ -2 \\ 0 \\ 1 \end{bmatrix}}.\]
+\item The dimension of the image (the rank) is \(2\), the dimension of the kernel (the nullity) is \(2\), and the dimension of the domain of \(T\) is \(4\), so we see \(2+2=4\), which verifies that the sum of the rank and nullity of \(T\) is the dimension of the domain of \(T\).
+\end{enumerate}
 \end{solution}
 
 \begin{problem}{A4}
@@ -862,7 +869,7 @@ So the inverse is \(\begin{bmatrix}  1 & 2 & -11 & 32 \\ 0 & -1 & 4 & -14 \\  0 
 
 
 
-\begin{problem}{G1}
+\begin{problem}{M4}
 \begin{enumerate}[(a)]
 \item Give a \(3\times 3\) matrix \(P\) that may be used to perform the row
       operation \({R_3} \to R_3+4 \, {R_1} \).
@@ -872,8 +879,6 @@ So the inverse is \(\begin{bmatrix}  1 & 2 & -11 & 32 \\ 0 & -1 & 4 & -14 \\  0 
       Use matrix multiplication to describe the matrix obtained by applying 
         \({R_3} \to 4 \, {R_1} + {R_3}\) and then \({R_1} \to -4 \, {R_1}\)
       to \(A\) (note the order).
-\item Finally, explain how to find the determinant of the matrix described in (c).
-
 \end{enumerate}
 \end{problem}
 \begin{solution}
@@ -883,9 +888,17 @@ So the inverse is \(\begin{bmatrix}  1 & 2 & -11 & 32 \\ 0 & -1 & 4 & -14 \\  0 
 \item
 \(Q=\begin{bmatrix} -4 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\)
 \item \( QPA\)
-\item \(\det (QPA) = \det(Q) \det(P) \det(A) = (-4) (1) (-5) = 20\).
 \end{enumerate}
 \end{solution}
+
+\begin{problem}{G1}
+Let \(A\) be a \(4 \times 4\) matrix with determinant \(-7\).
+\begin{enumerate}[(a)]
+\item Let \(B\) be the matrix obtained from \(A\) by applying the row operation \(R_3 \to R_3+3R_4\). What is \(\det(B)\)?
+\item Let \(C\) be the matrix obtained from \(A\) by applying the row operation \(R_2 \to -3R_2\). What is \(\det(C)\)?
+\item Let \(D\) be the matrix obtained from \(A\) by applying the row operation \(R_3 \leftrightarrow R_4\). What is \(\det(D)\)?
+\end{enumerate}
+\end{problem}
 
 \begin{problem}{G2}
 Show how to compute the determinant of the matrix
