Update standards, addresses #117

--- a/tex/modules/2-V/standards.tex
+++ b/tex/modules/2-V/standards.tex
@@ -4,30 +4,27 @@
     explain why a given set with defined addition and scalar multiplication does satisfy a given vector space property, but nonetheless isn't a vector space.
   }
   \standard{Linear combinations}{LinCmb}{
-    determine if a Euclidean vector can be written as a linear combination of a given set of Euclidean vectors.
+    determine if a Euclidean vector can be written as a linear combination of a given set of Euclidean vectors by solving an appropriate vector equation.
   }
   \standard{Spanning sets}{Span}{
-    determine if a set of Euclidean vectors spans \(\IR^n\).
+    determine if a set of Euclidean vectors spans \(\IR^n\) by solving appropriate vector equations.
   }
   \standard{Subspaces}{Subsp}{
     determine if a subset of \(\IR^n\) is a subspace or not.
   }
   \standard{Linear independence}{LinInd}{
     determine if a set of Euclidean vectors is linearly dependent or
-    independent.
+    independent by solving an appropriate vector equation.
   }
   \standard{Basis verification}{BasVer}{
-    determine if a set of Euclidean vectors is a basis of \(\IR^n\).
+    explain why a set of Euclidean vectors is or is not a basis of \(\IR^n\).
   }
   \standard{Basis computation}{BasCmp}{
     compute a basis for the subspace spanned by a given set of Euclidean
-    vectors.
+    vectors, and determine the dimension of the subspace.
   }
-  \standard{Dimension}{Dim}{
-    compute the dimension of a subspace of \(\IR^n\).
-  }
-  \standard{Polynomial basis computation}{PolyBasis}{
-    compute a basis for the subspace spanned by a given set of polynomials or matrices.
+  \standard{Polynomial and Matrix computation}{PolyBasis}{
+     answer questions about vector spaces of polynomials or matrices.
   }
   \standard{Basis of solution space}{BasSol}{
     find a basis for the solution set of a homogeneous system of equations.
