--- a/tex/modules/4-A/standards.tex
+++ b/tex/modules/4-A/standards.tex
@@ -9,7 +9,7 @@
     perform related computations.
   }
   \standard{Kernel and Image}{KerImg}{
-    compute a basis for the kernel and a basis for the image of a linear map.
+    compute a basis for the kernel and a basis for the image of a linear map, and verify that the rank-nullity theorem holds for a given linear map.
   }
   \standard{Injectivity and surjectivity}{InjSrj}{
     determine if a given linear map is injective and/or surjective.
