--- a/tex/modules/5-M/standards.tex
+++ b/tex/modules/5-M/standards.tex
@@ -9,4 +9,7 @@
   \standard{Matrix inverses}{InvCmp}{
     compute the inverse matrix of an invertible matrix.
   }
+  \standard{Row operations as matrix multiplication}{RowMult}{
+    can express row operations through matrix multiplication.
+  }
 \end{moduleStandards}
