--- a/tex/modules/6-G/standards.tex
+++ b/tex/modules/6-G/standards.tex
@@ -1,8 +1,7 @@
 \moduleQuestion{How can we understand linear maps geometrically?}
 \begin{moduleStandards}
-  \standard{Row operations}{RowOp}{
-    describe how a row operation affects the determinant of a matrix, including composing two row operations.
-  }
+  \standard{Row operations and Determinants}{RowOp}{
+    describe how a row operation affects the determinant of a matrix. }
   \standard{Determinants}{Det}{
     compute the determinant of a \(4\times 4\) matrix.
   }
