--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -844,7 +844,7 @@ Let \(T: \IR^4 \rightarrow \IR^3\) be the linear transformation given by the sta
 Compute \[\RREF\begin{bmatrix}1 & 3 & 2 & -3 \\ 2 & 4 & 6 & -10 \\ 1 & 6 & -1 & 3 \end{bmatrix} = \begin{bmatrix} 1 & 0 & 5 & -9 \\ 0 & 1 & -1 & 2 \\ 0 & 0 & 0 & 0\end{bmatrix}.\]
 \begin{enumerate}[(a)]
 \item Note that the third and fourth columns are non-pivot columns, which means \(\ker T\) contains infinitely many vectors, so \(T\) is not injective.
-\item Since the third row lacks a pivot, the image (i.e. the span of the columns) is a 2-dimensional subspace (and thus does not equal \(\IR^3\)), so \(T\) is not surjective.
+\item Since there are only two pivots, the image (i.e. the span of the columns) is a 2-dimensional subspace (and thus does not equal \(\IR^3\)), so \(T\) is not surjective.
 \end{enumerate}
 \end{solution}
 
